kubernetes/apps/llmkube/ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: llmkube
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: llmkube
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-icmp
  namespace: llmkube
spec:
  endpointSelector: {}
  ingress:
    - fromEntities:
        - all
      icmps:
        - fields:
            - type: 0
              family: IPv4
            - type: 3
              family: IPv4
            - type: 8
              family: IPv4
